# example

./: .bazelignore  .bazelrc  .bazelversion  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  config.js  customer_info.py  default.json  deps.bzl  engflow-ca.crt  go.mod  go.sum  googleapis-loads.patch  maven_install.json  profile.json  profile1.json  renovate-global.json  renovate.json  test-all.py
.github/: renovate.yml
.github/workflows/: main.yml  renovate.yml
buck2/cpp/: .buckconfig  BUCK  README.md  hello.cc  hello_test.cc  main.cpp
buck2/cpp/toolchains/: BUCK  tools.bzl
buck2/golang/: .buckconfig  README.md
buck2/golang/go/: BUCK  main.go
buck2/golang/go/greeting/: BUCK  greeting.go  greeting_test.go
buck2/golang/toolchains/: BUCK  defs.bzl
buck2/python/: .buckconfig  README.md  test_utils.bzl
buck2/python/hello/: BUCK  hello.py  hello_unittest_test.py  main.py
buck2/python/main/: BUCK  main.py
buck2/python/toolchains/: BUCK  defs.bzl
buck2/rust/: .buckconfig  BUCK  README.md
buck2/rust/src/: lib.rs
buck2/rust/test/: test.rs
buck2/rust/toolchains/: BUCK  defs.bzl
bzlmod/: README.md
bzlmod/canonical-repo-name-injection/: .gitignore  BUILD  MODULE.bazel  README.md  repo-dir-check.mjs  repo-names.bzl
cmake/: BUILD
cpp/: BUILD  hello.cc  hello.h  hello_test.cc  main.cc
csharp/: BUILD  Main.cs
docker-network/: BUILD  DockerNetworkTest.java  README.md
docker-sandbox/: .bazelrc  BUILD  README.md  WORKSPACE  create-workspace.sh  hello.cc
docker/network/: BUILD  DockerNetworkTest.java  Dockerfile  README.md  WORKSPACE
docker/sandbox/: BUILD  Hello.java  WORKSPACE  hello.cc
docker/sysbox/: .bazelrc  README.md  WORKSPACE
docker/sysbox/dind_test/: BUILD  check_docker.sh
docker/sysbox/genrules/: BUILD
docker/sysbox/platform/: BUILD
docker/sysbox/sudo_test/: Dockerfile  entrypoint.sh
docker_sandbox/: Hello.java
docs/goma/: README.md  goma_server_patches.patch  platform
docs/selenium/: README.md  WORKSPACE  bazelrc
docs/tensorflow/: 0001-Update-.bazelrc-settings-for-EngFlow-RE.patch  0002-Use-absolute-paths-for-which-and-find.patch  0003-Disable-Pool-platform-option.patch  README.md
genrules/: BUILD
go/: BUILD  main.go
go/proto/: BUILD  engflowapis-go.patch
go/resourceusage/: BUILD  README.md  resourceusage.go
infra/: auth-buck2.sh  bazel_credential_helper.sh  bazelrc  setup-buck2.sh  test-all.py  test-buck2.sh  test-github-auth.sh
infra/msvc_filter_showincludes/: BUILD  msvc_filter_showincludes.go  msvc_filter_showincludes_test.go
ios/: BUILD  BUILD.bazel  HelloApp.swift  HelloAppUITest.swift  HelloTest.swift
java/com/engflow/binaryinput/: BUILD  BenchmarkScript.py  Main.java  README.md
java/com/engflow/cycleexample/: README.md
java/com/engflow/cycleexample/class_a/: BUILD  ClassA.java  ClassATest.java
java/com/engflow/cycleexample/class_b/: BUILD  ClassB.java  ClassBTest.java
java/com/engflow/cycleexample/class_c/: BUILD  ClassC.java  ClassCTest.java
java/com/engflow/cycleexample/interface_a/: InterfaceA.java
java/com/engflow/cycleexample/interface_b/: InterfaceB.java
java/com/engflow/cycleexample/main/: BUILD  Main.java
java/com/engflow/example/: BUILD  Example.java  ExampleTest.java
java/com/engflow/internship/: README.md
java/com/engflow/internship/binaryinput/: BUILD  Main.java  README.md
java/com/engflow/internship/cycleexample/: README.md
java/com/engflow/internship/setinput/: README.md
java/com/engflow/internship/varyinginputs/: README.md
java/com/engflow/notificationqueue/: BUILD  Client.java  DemoServer.java  NotificationOptions.java  README.md  server.proto
java/com/engflow/notificationqueue/demoserver/: BUILD  DemoServer.java  server.proto
java/com/engflow/setinput/: README.md
java/com/engflow/setinput/genreader/: GenReader.java
java/com/engflow/setinput/main/: BUILD  Main.java
java/com/engflow/varyinginputs/: README.md
java/com/engflow/varyinginputs/input/: BUILD
java/com/engflow/varyinginputs/main/: BUILD  Main.java
java/com/engflow/varyinginputs/reader/: BUILD  Reader.java  ReaderTest.java
kotlin/: BUILD  Main.kt
perl/: BUILD  hello_world.pl
platform/linux_amd64/: BUILD
platform/linux_x64/: BUILD  cc_toolchain_config.bzl
platform/linux_x64/docker/: Dockerfile  README.md
platform/macos_amd64/: BUILD
platform/macos_arm64/: BUILD
platform/macos_x64/: BUILD
platform/windows_amd64/: BUILD
platform/windows_x64/: BUILD  builtin_include_directory_paths_clangcl  builtin_include_directory_paths_mingw  builtin_include_directory_paths_msvc  clang_installation_error.bat  windows_cc_toolchain_config.bzl
platform/windows_x64/docker/: Dockerfile  README.md  build.ps1  install_jre.ps1  install_msys2.ps1  install_python.ps1  install_vs_build_tools.ps1  normalize_os_windows.ps1
python/: BUILD  example.py  hello_absl_test.py  hello_pytest_test.py  hello_unittest_test.py  main.py  requirements.txt  requirements_lock.txt  test_example.py
python/pytest/: BUILD  pytest.bzl  pytest_runner.py
remote_config/cc/: BUILD  builtin_include_directory_paths  module.modulemap  stub_cc_toolchain_config.bzl
remote_config/config/: BUILD
runfiles/: README.md
runfiles/engflow/: BUILD  MODULE.bazel  runfiles_demo.py
runfiles/engflow/data/: BUILD
runfiles/frobozz/: BUILD  MODULE.bazel
scala/: BUILD  deps.bzl  rules_scala-6.4.0.patch  rules_scala-6.5.0.patch  rules_scala-6.6.0.patch
scala/com/engflow/example/: BUILD  ScalaExample.scala  ScalaExampleTest.scala
scala/com/hello/: Main.scala
scala/extensions/: README.md  config.bzl  deps.bzl
scripts/: customer_info.py  customer_info.yaml
scripts/customer-info/: README.md  customer_info.py  customer_info.yaml  readme.md
swift/: .bazelrc  BUILD  WORKSPACE  example.swift  main.swift  swfit_test.swift
typescript/: BUILD  README.md  main.ts  package.json  pnpm-lock.yaml  tsconfig.json
typescript/src/demo/: BUILD.bazel
typescript/src/demo/components/Snackbar/: BUILD.bazel  Snackbar.tsx
typescript/src/lib/Card/: BUILD.bazel
typescript/src/lib/Snackbar/: BUILD.bazel
(+31 files in other folders)
