# Copyright 2024 EngFlow Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

"""Example module for canonical repo name injection"""

# Main module
module(name = "frobozz", version = "1.2.3")

# aspect_rules_js
bazel_dep(name = "aspect_rules_js", version = "2.0.1", repo_name = "rules_js")

pnpm = use_extension("@rules_js//npm:extensions.bzl", "pnpm")
use_repo(pnpm, "pnpm")

# rules_bison
bazel_dep(name = "rules_bison", version = "0.2.2")

bison = use_extension(
    "@rules_bison//bison/extensions:bison_repository_ext.bzl",
    "bison_repository_ext",
)
bison.repository(version = "3.3.2")
use_repo(bison, "bison_v3.3.2")
