package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "snackbar_demo",
    srcs = [
        "Snackbar.tsx",
    ],
    tsconfig = "//typescript:tsconfig.json",
    deps = [
        "//typescript/src/lib/Snackbar:snackbar",
        "@npm//@types",
        "@npm//react",
        "@npm//react-dom",
    ],
)
